Start on the Vulkan engine --> created a wrapper + vulkan_window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_compile_definitions("FMT_HEADER_ONLY=1")
 
 set(Neko_Profile OFF CACHE BOOL "Activate Profiling with Easy Profile")
 set(Neko_GLES3 ON CACHE BOOL "Activate OpenGL ES 3.0")
+set(Neko_VULKAN ON CACHE BOOL "Activate Vulkan")
 set(Neko_SDL2 ON CACHE BOOL "Activate SDL2")
 set(Neko_Box2D OFF CACHE BOOL "Activate Box2D")
 set(Neko_Test ON CACHE BOOL "Activate Neko Test")
@@ -109,6 +110,12 @@ if(Neko_GLES3)
     endif()
     set(GLES3_WRAPPER_DIR "common/gles3_wrapper" CACHE INTERNAL "")
     add_subdirectory(${GLES3_WRAPPER_DIR})
+endif()
+
+if(Neko_VULKAN)
+    add_compile_definitions("NEKO_VULKAN=1")
+    set(VULKAN_WRAPPER_DIR "common/vulkan_wrapper" CACHE INTERNAL "")
+    add_subdirectory(${VULKAN_WRAPPER_DIR})
 endif()
 
 if(Neko_SDL2)
