Added testAer and renamed test to testNeko

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,14 @@ set(Neko_Profile OFF CACHE BOOL "Activate Profiling with Easy Profile")
 set(Neko_GLES3 ON CACHE BOOL "Activate OpenGL ES 3.0")
 set(Neko_SDL2 ON CACHE BOOL "Activate SDL2")
 set(Neko_Box2D OFF CACHE BOOL "Activate Box2D")
-set(Neko_Test ON CACHE BOOL "Activate Test")
+set(Neko_Test ON CACHE BOOL "Activate Neko Test")
 set(Neko_Freetype ON CACHE BOOL "Activate Freetype")
 set(Neko_Assert ON CACHE BOOL "Activate Neko Assertion")
 set(Neko_Benchmark ON CACHE BOOL "Activate Benchmark")
 set(Neko_Assimp ON CACHE BOOL "Activate Assimp Wrapper")
 set(Neko_SFML_NET ON CACHE BOOL "Activate SFML Net Wrapper")
 set(Aer_Lib ON CACHE BOOL "Activate Aer_Lib")
+set(Aer_Test ON CACHE BOOL "Activate Aer Test")
 set(Neko_SameThread OFF CACHE BOOL "Activate Same Thread Rendering and Resource Loading")
 
 
@@ -153,14 +154,17 @@ if(Neko_Freetype)
     add_subdirectory("common/ft_wrapper")
 endif()
 
-if(Neko_Test)
+if(Neko_Test OR Aer_Test)
     enable_testing()
     set(GOOGLE_TEST_DIR ${EXTERNAL_DIR}/googletest-1.8.1)
     set(BUILD_GMOCK OFF CACHE INTERNAL "")
     set(INSTALL_GTEST OFF CACHE INTERNAL "")
     add_subdirectory(${GOOGLE_TEST_DIR})
+endif()
+
+if(Neko_Test)
     include_directories(${GOOGLE_TEST_DIR}/include)
-    add_subdirectory("test/")
+    add_subdirectory("testNeko/")
     set_target_properties (gtest PROPERTIES FOLDER Externals/GTest)
     set_target_properties(gtest_main PROPERTIES FOLDER Externals/GTest)
 endif()
@@ -177,6 +181,13 @@ endif()
 
 if(Aer_Lib)
     add_subdirectory("common/aer_lib")
+endif()
+
+if(Aer_Test)
+    include_directories(${GOOGLE_TEST_DIR}/include)
+    add_subdirectory("testAer/")
+    set_target_properties (gtest PROPERTIES FOLDER Externals/GTest)
+    set_target_properties(gtest_main PROPERTIES FOLDER Externals/GTest)
 endif()
 
 set(main_project_dir "main/")
