--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,12 +168,13 @@ if(Neko_SFML_NET)
 	add_subdirectory("${SFML_DIR}")
 endif()
 
-if(Neko_Freetype)
-    set(FREETYPE_DIR "${EXTERNAL_DIR}/freetype-2.10.0" CACHE STRING "")
-    include_directories("${FREETYPE_DIR}")
-    add_subdirectory("${FREETYPE_DIR}")
-    set_target_properties (freetype PROPERTIES FOLDER Externals)
-endif()
+#if(Neko_Freetype)
+#    set(FREETYPE_DIR "${EXTERNAL_DIR}/freetype-2.10.0" CACHE STRING "")
+#    include_directories("${FREETYPE_DIR}")
+#    add_subdirectory("${FREETYPE_DIR}")
+#    set_target_properties (freetype PROPERTIES FOLDER Externals)
+#    add_subdirectory("common/ft_wrapper")
+#endif()
 
 if(Neko_Test OR Aer_Test)
     enable_testing()
@@ -227,4 +228,4 @@ foreach(main_project_path ${main_projects} )
     if(${main_project_name})
         add_subdirectory(${main_project_path})
     endif()
-endforeach()
+endforeach() 
