--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ matrix:
         - mkdir build
         - cd build
         - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
-        - ./test/Neko_TEST
-        - ./test/Aer_TEST
+        - ./testNeko/Neko_TEST
+        - ./testAer/Aer_TEST
     - name: "Windows"
       os: windows
       env:
@@ -40,8 +40,8 @@ matrix:
         - mkdir build && cd build
         - cmake -G "Visual Studio 16 2019" ..
         - cmake --build .
-        - ./test/Debug/Neko_TEST.exe
-        - ./test/Debug/Aer_TEST.exe
+        - ./testNeko/Debug/Neko_TEST.exe
+        - ./testAer/Debug/Aer_TEST.exe
 
 # Don't send notifications on success
 notifications:
