--- a/main/vulkan_engine/CMakeLists.txt
+++ b/main/vulkan_engine/CMakeLists.txt
@@ -6,9 +6,14 @@ file(GLOB_RECURSE shaders_src ${CMAKE_SOURCE_DIR}/data/shaders/aer_racer/*.vert 
 
 source_group("Shaders"	FILES ${shaders_src})
 
-add_executable(vk_engine src/main.cpp "src/vk_draw_system.cpp")
+add_executable(vk_engine src/main.cpp "src/vk_draw_system.cpp" "include/vulkan_engine/vulkan_engine_pch.h")
 target_link_libraries(vk_engine PUBLIC Neko_Core sdl_engine vulkan_wrapper)
 neko_bin_config(vk_engine)
+
+set_target_properties(vk_engine PROPERTIES UNITY_BUILD ON)
+if(NOT Emscripten)
+    target_precompile_headers(vk_engine PRIVATE "include/vulkan_engine/vulkan_engine_pch.h")
+endif()
 
 if(EMSCRIPTEN)
     get_target_property(bin_link_flags vk_engine LINK_FLAGS)
