--- a/common/vulkan_wrapper/CMakeLists.txt
+++ b/common/vulkan_wrapper/CMakeLists.txt
@@ -10,6 +10,8 @@ file(GLOB_RECURSE vulkan_wrapper_src include/*.h src/*.cpp)
 add_library(vulkan_wrapper STATIC ${vulkan_wrapper_src})
 target_link_libraries(vulkan_wrapper PUBLIC ${VULKAN_WRAPPER_LIBS})
 
+set_target_properties(vulkan_wrapper PROPERTIES UNITY_BUILD ON)
+
 target_include_directories(vulkan_wrapper PUBLIC "include/")
 neko_lib_config(vulkan_wrapper)
 set_target_properties (vulkan_wrapper PROPERTIES FOLDER Neko/Common)
