--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ matrix:
       os: linux
       dist: focal
       compiler: clang
+      services:
+        - xvfb
       addons:
         apt:
           packages:
@@ -18,6 +20,11 @@ matrix:
 
       before_install:
         - eval "CC=clang-8 && CXX=clang++-8"
+        - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+      before_script:
+        - "export DISPLAY=:99.0"
+        - "sh -e /etc/init.d/xvfb start"
+        - sleep 3 # give xvfb some time to start
       script:
         - mkdir build
         - cd build
@@ -35,6 +42,8 @@ matrix:
       install:
         - choco install visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Component.VC.Tools.x86.x64"
       script:
+        - export SDL_VIDEODRIVER=x11;
+        - export DISPLAY=:99.0;
         - export PATH=$CMAKE_PATH:$PATH
         - export VULKAN_SDK="/c/VulkanSDK/$(ls /c/VulkanSDK/)"
         - mkdir build && cd build
