--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,6 @@ matrix:
 
       before_install:
         - eval "CC=clang-8 && CXX=clang++-8"
-        - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
-      before_script:
-        - "export DISPLAY=:99.0"
-        - "sh -e /etc/init.d/xvfb start"
-        - sleep 3 # give xvfb some time to start
       script:
         - mkdir build
         - cd build
@@ -33,6 +28,8 @@ matrix:
         - ./testAer/Aer_TEST
     - name: "Windows"
       os: windows
+      services:
+        - xvfb
       env:
         - CMAKE_PATH="/c/Program Files/CMake/bin"
         - MSBUILD_PATH="C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin"
