Fix travis gui with win

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ matrix:
       services:
         - xvfb
       env:
-        - TRAVIS_GUI="true"
       addons:
         apt:
           packages:
@@ -33,7 +32,7 @@ matrix:
       services:
         - xvfb
       env:
-        - TRAVIS_GUI="false"
+        - WIN_TRAVIS="true"
         - CMAKE_PATH="/c/Program Files/CMake/bin"
         - MSBUILD_PATH="C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin"
       before_install:
