--- a/common/aer_lib/CMakeLists.txt
+++ b/common/aer_lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-LIST(APPEND aer_lib_libs Neko_Core sdl_engine gles3_wrapper)
+LIST(APPEND aer_lib_libs Neko_Core sdl_engine gles3_wrapper assimp_wrapper ft_wrapper)
 
 file(GLOB_RECURSE aer_lib_src include/*.h src/*.cpp)
 
