--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ matrix:
         - mkdir build
         - cd build
         - cmake .. && make
-        - ./test/Neko_TEST
+        - ./testNeko/Neko_TEST
+        - ./testAer/Aer_TEST
     - name: "Linux ARM64 Clang"
       os: linux
       arch: arm64
@@ -46,7 +47,7 @@ matrix:
         - mkdir build
         - cd build
         - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
-        - ./test/Neko_TEST
+        - ./testNeko/Neko_TEST
         - ./testAer/Aer_TEST
     - name: "Emscripten"
       os: linux
@@ -77,7 +78,7 @@ matrix:
         - cd build
         - emcmake cmake .. || true
         - emcmake cmake .. && make comp_graph Neko_TEST
-        - node test/Neko_TEST.js
+        - node testNeko/Neko_TEST.js
     - name: "Windows MSVC"
       os: windows
       env:
