--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ dist: focal
 
 matrix:
   include:
-    - name: "Linux AMD64 Clang"
+    - name: "Linux Clang"
       os: linux
-      arch: amd64
       dist: focal
       compiler: clang
       services:
         - xvfb
+      env:
       addons:
         apt:
           packages:
@@ -18,72 +18,16 @@ matrix:
             - libsdl2-dev
             - python3-dev
             - glslang-tools
-            - libzstd-dev
+
       before_install:
         - eval "CC=clang-8 && CXX=clang++-8"
-      script:
-        - mkdir build
-        - cd build
-        - cmake .. && make
-        - ./testNeko/Neko_TEST
-        - ./testAer/Aer_TEST
-    - name: "Linux ARM64 Clang"
-      os: linux
-      arch: arm64
-      dist: focal
-      compiler: clang
-      services:
-        - xvfb
-      addons:
-        apt:
-          packages:
-            - clang
-            - libc++-dev
-            - libc++abi-dev
-            - libsdl2-dev
-            - python3-dev
-            - glslang-tools
-            - libzstd-dev
-            - nodejs
-      before_install:
-        - eval "CC=clang && CXX=clang++"
       script:
         - mkdir build
         - cd build
         - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
         - ./testNeko/Neko_TEST
         - ./testAer/Aer_TEST
-    - name: "Emscripten"
-      os: linux
-      arch: amd64
-      dist: focal
-      compiler: clang
-      addons:
-        apt:
-          packages:
-            - python3-dev
-            - glslang-tools
-            - libzstd-dev
-      before_script:
-        - cd externals/KTX-Software
-        - mkdir build && cd build
-        - cmake -DCMAKE_BUILD_TYPE=Release -DKTX_VERSION_FULL="v4.0.0-beta4" .. && make mkvk toktx
-        - export TOKTX_EXE="$PWD/tools/toktx/toktx"
-        - cd ../../..
-        - git clone https://github.com/emscripten-core/emsdk.git
-        - cd emsdk
-        - ./emsdk install latest
-        - ./emsdk activate latest
-        - source ./emsdk_env.sh
-        - cd ..
-      script:
-        - ls
-        - mkdir build
-        - cd build
-        - emcmake cmake .. || true
-        - emcmake cmake .. && make comp_graph Neko_TEST
-        - node testNeko/Neko_TEST.js
-    - name: "Windows MSVC"
+    - name: "Windows"
       os: windows
       services:
         - xvfb
@@ -109,4 +53,3 @@ matrix:
 notifications:
   email:
     on_success: never
-
