--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,11 @@ dist: focal
 
 matrix:
   include:
-    - name: "Linux Clang"
+    - name: "Linux AMD64 Clang"
       os: linux
+      arch: amd64
       dist: focal
       compiler: clang
-      services:
-        - xvfb
-      env:
       addons:
         apt:
           packages:
@@ -24,15 +22,64 @@ matrix:
       script:
         - mkdir build
         - cd build
+        - cmake .. && make
+        - ./test/Neko_TEST
+    - name: "Linux ARM64 Clang"
+      os: linux
+      arch: arm64
+      dist: focal
+      compiler: clang
+      addons:
+        apt:
+          packages:
+            - clang
+            - libc++-dev
+            - libc++abi-dev
+            - libsdl2-dev
+            - python3-dev
+            - glslang-tools
+            - libzstd-dev
+            - nodejs
+      before_install:
+        - eval "CC=clang && CXX=clang++"
+      script:
+        - mkdir build
+        - cd build
         - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
-        - ./testNeko/Neko_TEST
-        - ./testAer/Aer_TEST
-  - name: "Windows MSVC"
+        - ./test/Neko_TEST
+    - name: "Emscripten"
+      os: linux
+      arch: amd64
+      dist: focal
+      compiler: clang
+      addons:
+        apt:
+          packages:
+            - python3-dev
+            - glslang-tools
+            - libzstd-dev
+      before_script:
+        - cd externals/KTX-Software
+        - mkdir build && cd build
+        - cmake -DCMAKE_BUILD_TYPE=Release -DKTX_VERSION_FULL="v4.0.0-beta4" .. && make mkvk toktx
+        - export TOKTX_EXE="$PWD/tools/toktx/toktx"
+        - cd ../../..
+        - git clone https://github.com/emscripten-core/emsdk.git
+        - cd emsdk
+        - ./emsdk install latest
+        - ./emsdk activate latest
+        - source ./emsdk_env.sh
+        - cd ..
+      script:
+        - ls
+        - mkdir build
+        - cd build
+        - emcmake cmake .. || true
+        - emcmake cmake .. && make comp_graph Neko_TEST
+        - node test/Neko_TEST.js
+    - name: "Windows MSVC"
       os: windows
-      services:
-        - xvfb
       env:
-        - WIN_TRAVIS="true"
         - CMAKE_PATH="/c/Program Files/CMake/bin"
         - MSBUILD_PATH="C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin"
       before_install:
@@ -46,9 +93,8 @@ matrix:
         - mkdir build && cd build
         - cmake -G "Visual Studio 16 2019" ..
         - cmake --build .
-        - ./testNeko/Debug/Neko_TEST.exe
-        - ./testAer/Debug/Aer_TEST.exe
-        
+        - ./test/Debug/Neko_TEST.exe
+
 # Don't send notifications on success
 notifications:
   email:
