--- a/.travis.yml
+++ b/.travis.yml
@@ -93,7 +93,7 @@ matrix:
         - MSBUILD_PATH="C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin"
       before_install:
         - choco install python
-        - choco install vulkan-sdk
+        - choco install vulkan-sdk --version=1.2.141.0
       install:
         - choco install visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Component.VC.Tools.x86.x64"
       script:
