--- a/externals/PhysX-4.1/physx/source/compiler/cmake/windows/CMakeLists.txt
+++ b/externals/PhysX-4.1/physx/source/compiler/cmake/windows/CMakeLists.txt
@@ -199,5 +199,5 @@ ELSE()
 ENDIF()
 
 IF(PX_GENERATE_STATIC_LIBRARIES)
-	STRING(APPEND HEADER_CONTENT "#define PX_PHYSX_STATIC_LIB\n")	
+	STRING(APPEND HEADER_CONTENT "#endif\n#ifndef DISABLE_CUDA_PHYSX\n#define DISABLE_CUDA_PHYSX\n#endif\n#ifndef PX_PHYSX_STATIC_LIB\n#define PX_PHYSX_STATIC_LIB\n#endif\n#ifndef PX_PHYSX_GPU_STATIC\n#define PX_PHYSX_GPU_STATIC\n")		
 ENDIF()
