Corrections for testAer to work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,17 +107,16 @@ include_directories("${IMGUI_ROOT}")
 add_subdirectory("${IMGUI_ROOT}")
 set_target_properties(imgui PROPERTIES UNITY_BUILD ON)
 
-
-if(Neko_GLES3)
+if(Neko_GLES3 AND NOT Neko_VULKAN)
     add_compile_definitions("NEKO_GLES3=1")
     if(NOT Emscripten)
-    add_subdirectory("${EXTERNAL_DIR}/glad")
+        add_subdirectory("${EXTERNAL_DIR}/glad")
     endif()
     set(GLES3_WRAPPER_DIR "common/gles3_wrapper" CACHE INTERNAL "")
     add_subdirectory(${GLES3_WRAPPER_DIR})
 endif()
 
-if(Neko_VULKAN) 
+if(Neko_VULKAN)
     add_compile_definitions("NEKO_VULKAN=1")
     set(VULKAN_WRAPPER_DIR "common/vulkan_wrapper" CACHE INTERNAL "")
     add_subdirectory(${VULKAN_WRAPPER_DIR})
