Create RigidComponentManager and PhysicShapeComponentManager

--- a/common/physx_wrapper/CMakeLists.txt
+++ b/common/physx_wrapper/CMakeLists.txt
@@ -32,6 +32,6 @@ file(GLOB_RECURSE physx_wrapper_src include/*.h src/*.cpp)
 add_subdirectory(${PHYSX_ROOT_DIR}/compiler/public ${PHYSX_DIR})
 
 add_library(physx_wrapper STATIC ${physx_wrapper_src})
-target_link_libraries(physx_wrapper PUBLIC ${PHYSX_WRAPPER_LIBS})
+target_link_libraries(physx_wrapper PUBLIC ${PHYSX_WRAPPER_LIBS} aer_lib Neko_Core)
 target_include_directories(physx_wrapper PUBLIC "include/")
 set_target_properties (physx_wrapper PROPERTIES FOLDER Neko/Common)
