--- a/externals/PhysX-4.1/physx/source/compiler/cmake/ios/CMakeLists.txt
+++ b/externals/PhysX-4.1/physx/source/compiler/cmake/ios/CMakeLists.txt
@@ -32,7 +32,7 @@ SET(CMAKE_SHARED_LINKER_FLAGS_CHECKED "")
 SET(CMAKE_SHARED_LINKER_FLAGS_PROFILE "")
 SET(CMAKE_SHARED_LINKER_FLAGS "")
 
-# Build debug info for all configurations
+# Build Debug info for all configurations
 SET(PHYSX_CXX_FLAGS_DEBUG "-O0 -g" CACHE INTERAL "PhysX Debug CXX Flags")
 SET(PHYSX_CXX_FLAGS_CHECKED "-O3 -g" CACHE INTERAL "PhysX Checked CXX Flags")
 SET(PHYSX_CXX_FLAGS_PROFILE "-O3 -g" CACHE INTERAL "PhysX Profile CXX Flags")
@@ -75,18 +75,18 @@ INCLUDE(SimulationController.cmake)
 INCLUDE(FastXml.cmake)
 
 # Set folder PhysX SDK to all common SDK source projects
-SET_PROPERTY(TARGET PhysX PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXCharacterKinematic PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXCommon PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXCooking PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXExtensions PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXVehicle PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET LowLevel PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET LowLevelAABB PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET LowLevelDynamics PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET SceneQuery PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET SimulationController PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET FastXml PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXPvdSDK PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXTask PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXFoundation PROPERTY FOLDER "PhysX SDK")
+SET_PROPERTY(TARGET PhysX PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXCharacterKinematic PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXCommon PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXCooking PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXExtensions PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXVehicle PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET LowLevel PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET LowLevelAABB PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET LowLevelDynamics PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET SceneQuery PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET SimulationController PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET FastXml PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXPvdSDK PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXTask PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXFoundation PROPERTY FOLDER "Externals/PhysX SDK")
