--- a/externals/PhysX-4.1/physx/source/compiler/cmake/uwp/CMakeLists.txt
+++ b/externals/PhysX-4.1/physx/source/compiler/cmake/uwp/CMakeLists.txt
@@ -97,28 +97,29 @@ INCLUDE(SimulationController.cmake)
 INCLUDE(FastXml.cmake)
 
 # Set folder PhysX SDK to all common SDK source projects
-SET_PROPERTY(TARGET PhysX PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXCharacterKinematic PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXCommon PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXCooking PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXExtensions PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXVehicle PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET LowLevel PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET LowLevelAABB PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET LowLevelDynamics PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET SceneQuery PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET SimulationController PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET FastXml PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXPvdSDK PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXTask PROPERTY FOLDER "PhysX SDK")
-SET_PROPERTY(TARGET PhysXFoundation PROPERTY FOLDER "PhysX SDK")
+SET_PROPERTY(TARGET PhysX PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXCharacterKinematic PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXCommon PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXCooking PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXExtensions PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXVehicle PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET LowLevel PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET LowLevelAABB PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET LowLevelDynamics PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET SceneQuery PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET SimulationController PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET FastXml PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXPvdSDK PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXTask PROPERTY FOLDER "Externals/PhysX SDK")
+SET_PROPERTY(TARGET PhysXFoundation PROPERTY FOLDER "Externals/PhysX SDK")
 
 SET(PHYSXDISTRO_LIBS PhysXFoundation PhysX PhysXCharacterKinematic PhysXPvdSDK PhysXCommon PhysXCooking PhysXExtensions PhysXVehicle)
 
 INSTALL(
 	TARGETS ${PHYSXDISTRO_LIBS}
 	EXPORT PhysXSDK
-		DESTINATION $<$<CONFIG:Debug>:${PX_ROOT_LIB_DIR}/Debug>$<$<CONFIG:Release>:${PX_ROOT_LIB_DIR}/Release>$<$<CONFIG:Checked>:${PX_ROOT_LIB_DIR}/Checked>$<$<CONFIG:Profile>:${PX_ROOT_LIB_DIR}/Profile>	)
+	DESTINATION $<$<CONFIG:Debug>:${PX_ROOT_LIB_DIR}/Debug>$<$<CONFIG:Release>:${PX_ROOT_LIB_DIR}/Release>$<$<CONFIG:Checked>:${PX_ROOT_LIB_DIR}/Checked>$<$<CONFIG:Profile>:${PX_ROOT_LIB_DIR}/Profile>	
+	)
 
 IF(PX_GENERATE_STATIC_LIBRARIES)
 	STRING(APPEND HEADER_CONTENT "#define PX_PHYSX_STATIC_LIB\n")	
