--- a/testAer/CMakeLists.txt
+++ b/testAer/CMakeLists.txt
@@ -12,6 +12,8 @@ target_link_libraries(Aer_TEST aer_lib gtest gtest_main Neko_Core sdl_engine phy
 target_include_directories(Aer_TEST PUBLIC "${PHYSX_INCLUDE_DIRS}")
 
 neko_bin_config(Aer_TEST)
+data_generate(Aer_TEST)
+set_target_properties (Aer_TEST_Generate_Data PROPERTIES FOLDER Aer/Test)
 if(UNIX)
 #target_compile_options(Aer_TEST PUBLIC "--coverage")
 #target_link_options(Aer_TEST PUBLIC "--coverage")
@@ -20,4 +22,4 @@ endif()
 if(EMSCRIPTEN)
     set_target_properties(Aer_TEST PROPERTIES SUFFIX ".js")
 endif()
-set_target_properties (Aer_TEST PROPERTIES FOLDER Neko/Core)
+set_target_properties (Aer_TEST PROPERTIES FOLDER Aer/Test)
