--- a/main/aer_editor/CMakeLists.txt
+++ b/main/aer_editor/CMakeLists.txt
@@ -2,7 +2,9 @@ include_directories("include/")
 
 file(GLOB_RECURSE aer_editor_src include/*.h src/*.cpp)
 
-file(GLOB_RECURSE shaders_src ${CMAKE_SOURCE_DIR}/data/shaders/aer_racer/*.vert ${CMAKE_SOURCE_DIR}/data/shaders/aer_racer/*.frag)
+file(GLOB_RECURSE shaders_src
+        "${CMAKE_SOURCE_DIR}/data/shaders/aer_racers/*.vert"
+        "${CMAKE_SOURCE_DIR}/data/shaders/aer_racers/*.frag")
 
 source_group("Shaders"	FILES ${shaders_src})
 
@@ -11,6 +13,9 @@ target_link_libraries(aer_editor PUBLIC Neko_Core aer_lib sdl_engine gles3_wrapp
 neko_bin_config(aer_editor)
 data_generate(aer_editor)
 set_target_properties (aer_editor_Generate_Data PROPERTIES FOLDER Aer/Main)
+
+add_dependencies(aer_editor_Generate_Data GenerateDataTool)
+add_dependencies(aer_editor aer_editor_Generate_Data)
 
 if(EMSCRIPTEN)
     get_target_property(bin_link_flags aer_editor LINK_FLAGS)
