Fixed vk_engine + fixed camera view generation + added compile option for LLDB on Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,11 @@ set(Neko_XXHash ON CACHE BOOL "Activate XXHash")
 MESSAGE("CMAKE SYSTEM NAME: ${CMAKE_SYSTEM_NAME}")
 
 if(UNIX)
+    string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
+    if(BUILD_TYPE STREQUAL "DEBUG")
+        message(STATUS "Enabled '-fstandalone-debug' for LLDB")
+        add_compile_options(-fstandalone-debug)
+    endif()
     EXECUTE_PROCESS(COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE)
     MESSAGE("UNIX Architecture: ${ARCHITECTURE}")
     if("${ARCHITECTURE}" MATCHES "arm")
