--- a/common/vulkan_wrapper/CMakeLists.txt
+++ b/common/vulkan_wrapper/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 #vulkan
-LIST(APPEND VULKAN_WRAPPER_LIBS Neko_Core sdl_engine assimp_wrapper ktx)
+LIST(APPEND VULKAN_WRAPPER_LIBS Neko_Core sdl_engine assimp ktx)
 
 find_package(Vulkan REQUIRED)
 include_directories(${VULKAN_INCLUDE_DIR})
