--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,7 @@ web_build/*
 **/PhysX-4.1/**/cmake_install.cmake
 **/PhysX-4.1/**/CTestTestfile.cmake
 **/PhysX-4.1/**/Makefile
-**/PhysX-4.1/**/*.cpb
+**/PhysX-4.1/**/*.cbp
 **/PhysX-4.1/**/*.sln
 **/PhysX-4.1/**/*.vcxproj
 **/PhysX-4.1/**/*.vcxproj.filters
