--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,8 @@ web_build/*
 **/PhysX-4.1/**/CMakeCache.txt
 **/PhysX-4.1/**/cmake_install.cmake
 **/PhysX-4.1/**/CTestTestfile.cmake
-**/PhysX-4.1/**/Makefile
+**/PhysX-4.1/**/Makefile*
+**/PhysX-4.1/**/PxConfig.h
 **/PhysX-4.1/**/*.cbp
 **/PhysX-4.1/**/*.sln
 **/PhysX-4.1/**/*.vcxproj
