Implemented FMOD + created an empty wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,22 +9,23 @@ set_property(GLOBAL PROPERTY USE_FOLDERS On)
 
 add_compile_definitions("FMT_HEADER_ONLY=1")
 
-set(Neko_Profile OFF CACHE BOOL "Activate Profiling with Easy Profile")
-set(Neko_GLES3 ON CACHE BOOL "Activate OpenGL ES 3.0")
-set(Neko_VULKAN OFF CACHE BOOL "Activate Vulkan")
-set(Neko_SDL2 ON CACHE BOOL "Activate SDL2")
-set(Neko_Box2D OFF CACHE BOOL "Activate Box2D")
-set(Neko_Test ON CACHE BOOL "Activate Neko Test")
-set(Neko_Freetype ON CACHE BOOL "Activate Freetype")
-set(Neko_Assert ON CACHE BOOL "Activate Neko Assertion")
-set(Neko_Benchmark ON CACHE BOOL "Activate Benchmark")
-set(Neko_SFML_NET ON CACHE BOOL "Activate SFML Net Wrapper")
-set(Neko_PhysX ON CACHE BOOL "Activate PhysX")
 set(Aer_Lib ON CACHE BOOL "Activate Aer_Lib")
 set(Aer_Test ON CACHE BOOL "Activate Aer Test")
+set(Neko_Assert ON CACHE BOOL "Activate Neko Assertion")
+set(Neko_Benchmark ON CACHE BOOL "Activate Benchmark")
+set(Neko_Box2D OFF CACHE BOOL "Activate Box2D")
+set(Neko_FMOD ON CACHE BOOL "Activate FMOD")
+set(Neko_Freetype ON CACHE BOOL "Activate Freetype")
+set(Neko_GLES3 ON CACHE BOOL "Activate OpenGL ES 3.0")
 set(Neko_KTX ON CACHE BOOL "Activate SFML Net Wrapper")
 set(Neko_PhysFS ON CACHE BOOL "Activate PhysFS Wrapper")
+set(Neko_PhysX ON CACHE BOOL "Activate PhysX")
+set(Neko_Profile OFF CACHE BOOL "Activate Profiling with Easy Profile")
 set(Neko_SameThread OFF CACHE BOOL "Activate Same Thread Rendering and Resource Loading")
+set(Neko_SDL2 ON CACHE BOOL "Activate SDL2")
+set(Neko_SFML_NET ON CACHE BOOL "Activate SFML Net Wrapper")
+set(Neko_Test ON CACHE BOOL "Activate Neko Test")
+set(Neko_VULKAN OFF CACHE BOOL "Activate Vulkan")
 set(Neko_XXHash ON CACHE BOOL "Activate XXHash")
 
 MESSAGE("CMAKE SYSTEM NAME: ${CMAKE_SYSTEM_NAME}")
@@ -91,6 +92,18 @@ if(Neko_XXHash)
     add_compile_definitions("XXH_INLINE_ALL=1")
 endif()
 
+if(Neko_FMOD)
+    set(FMOD_ROOT "${EXTERNAL_DIR}/FMOD" CACHE STRING "")
+    if (WIN32)
+        include_directories("${FMOD_ROOT}/win64/inc")
+    elseif (UNIX)
+        include_directories("${FMOD_ROOT}/linux_x86_64/inc")
+    endif ()
+    add_subdirectory("${FMOD_ROOT}")
+    set_target_properties(fmod PROPERTIES UNITY_BUILD ON)
+
+    add_subdirectory(common/fmod_wrapper)
+endif()
 
 if(Neko_Profile)
     MESSAGE("Enable profiling")
