--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,11 @@ include(cmake/neko_executable.cmake)
 add_compile_definitions("FMT_HEADER_ONLY=1")
 
 # Selects the correct toolchain to use
-string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
 message(STATUS "CMake System Name: ${CMAKE_SYSTEM_NAME}")
 if (MSVC)
     include(cmake/platforms/msvc.cmake)
 elseif (UNIX)
+	string(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
     if (BUILD_TYPE STREQUAL "DEBUG")
         message(VERBOSE "Enabled '-fstandalone-debug' for LLDB")
         add_compile_options(-fstandalone-debug)
@@ -176,7 +176,7 @@ if(Neko_PhysX)
     set(PHYSX_ROOT_DIR ${PHYSX_DIR}/physx)
     if (EXISTS "${PHYSX_ROOT_DIR}/include/PxConfig.h")
         message(STATUS "PhysX is already built")
-    elseif (BUILD_TYPE STREQUAL "RELEASE")
+    else () #if (BUILD_TYPE STREQUAL "RELEASE")
         message(STATUS "Rebuilding PhysX")
         if (MSVC)
             execute_process(COMMAND "${PHYSX_ROOT_DIR}/generate_projects.bat" windows)
