Created a FMOD engine
+ Added an AudioSource component with its associated Manager and Viewer
+ Added a small utility to get the paths to the different resource folders
+ Modified ImGui to make it remember whether the window was open or not
+ Fixed some missing includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ set(Aer_Lib ON CACHE BOOL "Activate Aer_Lib")
 set(Aer_Test ON CACHE BOOL "Activate Aer Test")
 set(Neko_Assert ON CACHE BOOL "Activate Neko Assertion")
 set(Neko_Benchmark OFF CACHE BOOL "Activate Benchmark")
+set(Neko_FMOD ON CACHE BOOL "Activate FMOD")
 set(Neko_Freetype ON CACHE BOOL "Activate Freetype")
 set(Neko_GLES3 ON CACHE BOOL "Activate OpenGL ES 3.0")
 set(Neko_ImGui ON CACHE BOOL "Activate ImGui")
@@ -95,6 +96,20 @@ if (Neko_Benchmark)
     neko_lib_config(benchmark)
     set_target_properties(benchmark PROPERTIES FOLDER Externals/GTest)
     set_target_properties(benchmark_main PROPERTIES FOLDER Externals/GTest)
+endif ()
+
+# Enables FMOD
+if (Neko_FMOD)
+    set(FMOD_ROOT "${EXTERNAL_DIR}/FMOD" CACHE STRING "")
+    if (WIN32)
+        include_directories("${FMOD_ROOT}/win64/inc")
+    elseif (UNIX)
+        include_directories("${FMOD_ROOT}/linux_x86_64/inc")
+    endif ()
+    add_subdirectory("${FMOD_ROOT}")
+    set_target_properties(fmod PROPERTIES UNITY_BUILD ON)
+
+    add_subdirectory(common/fmod_wrapper)
 endif ()
 
 # Enables Freetype
