--- a/common/aer_lib/CMakeLists.txt
+++ b/common/aer_lib/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-list(APPEND aer_lib_libs Neko_Core sdl_engine physx_wrapper)
+list(APPEND aer_lib_libs Neko_Core sdl_engine physx_wrapper fmod_wrapper)
 if(Neko_GLES3 AND NOT Neko_VULKAN)
     list(APPEND aer_lib_libs gles3_wrapper)
 endif()
